Chapter 10/containment-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-by-default
spec:
  podSelector:
    matchLabels: 
      app: compromised-pod-label
  policyTypes:
  - Egress
  - Ingress
